# bazel-buildbarn

./: BUILD.bazel  README.md  WORKSPACE  dep.sh
cmd/bazel_buildbarn/: BUILD.bazel  action_cache_server.go  byte_stream_service.go  content_addressable_storage_server.go  execution_server.go  main.go
cmd/bbb_frontend/: BUILD.bazel  main.go
cmd/bbb_monolithic/: BUILD.bazel  action_cache_server.go  byte_stream_service.go  content_addressable_storage_server.go  main.go
cmd/bbb_scheduler/: BUILD.bazel  main.go
cmd/bbb_worker/: BUILD.bazel  main.go
doc/diagrams/: bbb-overview.xml
pkg/ac/: BUILD.bazel  action_cache.go  action_cache_server.go  blob_access_action_cache.go
pkg/blobstore/: BUILD.bazel  action_cache_server.go  batch_writing_blob_access.go  blob_access.go  blob_keyer.go  byte_stream_server.go  content_addressable_storage_server.go  gs_blob_access.go  memory_blob_access.go  merkle_blob_access.go  metrics_blob_access.go  minio_blob_access.go  redis_blob_access.go  remote_blob_access.go  s3_blob_access.go  size_distinguishing_blob_access.go  validating_blob_access.go
pkg/builder/: BUILD.bazel  blob_access_input_file_exposer.go  build_executor.go  build_queue.go  cached_build_queue.go  cached_input_file_exposer.go  caching_build_executor.go  caching_input_file_exposer.go  demultiplexing_build_queue.go  forwarding_build_queue.go  grpc_client_conn_build_queue.go  hardlinking_input_file_exposer.go  input_file_exposer.go  local_build_executor.go  synchronous_build_queue.go  uncached_input_file_exposer.go  worker_build_queue.go
pkg/cas/: BUILD.bazel  blob_access.go  blob_access_content_addressable_storage.go  byte_stream_server.go  content_addressable_storage.go  content_addressable_storage_server.go  directory_caching_content_addressable_storage.go  hardlinking_content_addressable_storage.go  memory_blob_access.go  validating_blob_access.go
pkg/proto/: BUILD.bazel  scheduler.proto
pkg/util/: BUILD.bazel  digest.go  digest_keyer.go
toolchain/: BUILD.bazel  CROSSTOOL
tools/debian_base/: BUILD.bazel
tools/debian_base/etc/: passwd
