filegroup(
    name = "empty",
)

cc_toolchain_suite(
    name = "debian9",
    toolchains = {
        "k8": ":debian9_toolchain",
    },
    visibility = ["//visibility:public"],
)

cc_toolchain(
    name = "debian9_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    cpu = "k8",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":empty",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
    visibility = ["//visibility:public"],
)
