load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "action_cache_server.go",
        "byte_stream_service.go",
        "content_addressable_storage_server.go",
        "main.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/cmd/bbb_monolithic",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/builder:go_default_library",
        "//pkg/util:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
        "@go_googleapis//google/watcher/v1:watcher_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "bbb_monolithic",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "bbb_monolithic_container",
    base = "//tools/debian_base",
    entrypoint = ["/bbb_monolithic"],
    files = [":bbb_monolithic"],
)
