load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blob_access.go",
        "memory_blob_access.go",
        "merkle_blob_access.go",
        "minio_blob_access.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_minio_minio_go//:go_default_library",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
