load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blob_access.go",
        "byte_stream_server.go",
        "merkle_blob_access.go",
        "metrics_blob_access.go",
        "redis_blob_access.go",
        "remote_blob_access.go",
        "s3_blob_access.go",
        "size_distinguishing_blob_access.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context/ctxhttp:go_default_library",
    ],
)
