load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "build_executor.go",
        "build_queue.go",
        "cached_build_queue.go",
        "input_file_exposer.go",
        "local_build_executor.go",
        "synchronous_build_queue.go",
        "uncached_input_file_exposer.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_satori_go_uuid//:go_default_library",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/watcher/v1:watcher_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
