load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blob_access_content_addressable_storage.go",
        "content_addressable_storage.go",
        "content_addressable_storage_server.go",
        "directory_caching_content_addressable_storage.go",
        "hardlinking_content_addressable_storage.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
