load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scheduler_proto",
    srcs = ["scheduler.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_proto"],
)

go_proto_library(
    name = "scheduler_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/proto/scheduler",
    proto = ":scheduler_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":scheduler_go_proto"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/proto/scheduler",
    visibility = ["//visibility:public"],
)
