load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "digest.go",
        "digest_keyer.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/devtools/remoteexecution/v1test:remoteexecution_go_proto",
    ],
)
