load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "debian_base",
    data_path = ".",
    debs = [
        "@debian_deb_bash//file",
        "@debian_deb_binutils//file",
        "@debian_deb_coreutils//file",
        "@debian_deb_cpp_6//file",
        "@debian_deb_cpp//file",
        "@debian_deb_dash//file",
        "@debian_deb_findutils//file",
        "@debian_deb_gcc_6//file",
        "@debian_deb_gcc//file",
        "@debian_deb_grep//file",
        "@debian_deb_libacl1//file",
        "@debian_deb_libattr1//file",
        "@debian_deb_libc6_dev//file",
        "@debian_deb_libc6//file",
        "@debian_deb_libgcc1//file",
        "@debian_deb_libgcc_6_dev//file",
        "@debian_deb_libgmp10//file",
        "@debian_deb_libisl15//file",
        "@debian_deb_libmpc3//file",
        "@debian_deb_libmpfr4//file",
        "@debian_deb_libpcre3//file",
        "@debian_deb_libpython27_minimal//file",
        "@debian_deb_libpython27_stdlib//file",
        "@debian_deb_libselinux1//file",
        "@debian_deb_libstdcxx_6_dev//file",
        "@debian_deb_libstdcxx6//file",
        "@debian_deb_libtinfo5//file",
        "@debian_deb_linux_libc_dev//file",
        "@debian_deb_python27_minimal//file",
        "@debian_deb_python_minimal//file",
        "@debian_deb_sed//file",
        "@debian_deb_zlib1g//file",
    ],
    files = ["etc/passwd"],
    visibility = ["//cmd:__subpackages__"],
)
